--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8"/>
 
         <!-- Set the title bar of the page -->
-        <title>Created with GameMaker: Studio</title>
+        <title>15-puzzle</title>
 
         <!-- Set the background colour of the document -->
         <style>
@@ -72,10 +72,21 @@
                height: 100%;
             }
         </style>
+      <script type="text/javascript">
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-122333408-1']);
+          _gaq.push(['_trackPageview']);
+          (function() {
+              var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+              ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+      </script>
     </head>
 
     <body>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
+        <img src="barley-break-html5/splash.png" id="GM4HTML5_loadingscreen" alt="GameMaker:HTML5 loading screen" style="display:none;"/>
             <!-- Create the canvas element the game draws to -->
             <canvas id="canvas" width="400" height="546">
                <p>Your browser doesn't support HTML5 canvas.</p>
@@ -83,6 +94,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/barley-break-html5.js?EVKAC=859441"></script>
+        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?NFOYB=46492578"></script>
     </body>
 </html>
