--- a/home.html
+++ b/home.html
@@ -72,15 +72,6 @@
                height: 100%;
             }
         </style>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122333408-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-122333408-1');
-</script>
       <script type="text/javascript">
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-122333408-1']);
@@ -103,6 +94,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?NFOYB=46492578"></script>
+        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?IAJYB=446529452"></script>
     </body>
 </html>
