--- a/home.html
+++ b/home.html
@@ -72,25 +72,14 @@
                height: 100%;
             }
         </style>
-        <script type="text/javascript">
-    window.onload = maxWindow;
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122333408-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    function maxWindow() {
-        window.moveTo(0, 0);
-
-
-        if (document.all) {
-            top.window.resizeTo(screen.availWidth, screen.availHeight);
-        }
-
-        else if (document.layers || document.getElementById) {
-            if (top.window.outerHeight < screen.availHeight || top.window.outerWidth < screen.availWidth) {
-                top.window.outerHeight = screen.availHeight;
-                top.window.outerWidth = screen.availWidth;
-            }
-        }
-    }
-
+  gtag('config', 'UA-122333408-1');
 </script>
       <script type="text/javascript">
           var _gaq = _gaq || [];
@@ -114,6 +103,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?IAJYB=446529452"></script>
+        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?NFOYB=46492578"></script>
     </body>
 </html>
