--- a/home.html
+++ b/home.html
@@ -73,14 +73,14 @@
             }
         </style>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122333408-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122333408-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
 
-  gtag('config', 'UA-122333408-1');
-</script>
+		  gtag('config', 'UA-122333408-1');
+		</script>
       <script type="text/javascript">
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-122333408-1']);
@@ -103,6 +103,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?NFOYB=46492578"></script>
+        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?FJIYB=771156549"></script>
     </body>
 </html>
