--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <!-- Set the background colour of the document -->
         <style>
             body {
-              background: #000000;
+              background: ${BACKGROUND_COLOUR};
               color:#cccccc;
               margin: 0px;
               padding: 0px;
@@ -35,11 +35,7 @@
             }
             div.gm4html5_div_class
             {
-              position: fixed;
-              top: 50%;
-              left: 50%;
-              margin-left: -200px;
-              margin-top: -273px;
+              margin: 0px;
               padding: 0px;
               border: 0px;
             }
@@ -73,14 +69,14 @@
             }
         </style>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122333408-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122333408-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-		  gtag('config', 'UA-122333408-1');
-		</script>
+  gtag('config', 'UA-122333408-1');
+</script>
       <script type="text/javascript">
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-122333408-1']);
@@ -103,6 +99,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?FJIYB=771156549"></script>
+        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?ELVAC=823399611"></script>
     </body>
 </html>
