--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <!-- Set the background colour of the document -->
         <style>
             body {
-              background: ${BACKGROUND_COLOUR};
+              background: #000000;
               color:#cccccc;
               margin: 0px;
               padding: 0px;
@@ -69,14 +69,14 @@
             }
         </style>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122333408-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122333408-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
 
-  gtag('config', 'UA-122333408-1');
-</script>
+		  gtag('config', 'UA-122333408-1');
+		</script>
       <script type="text/javascript">
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-122333408-1']);
@@ -99,6 +99,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?ELVAC=823399611"></script>
+        <script type="text/javascript" src="barley-break-html5/barley-break-html5.js?ILBYB=1295875322"></script>
     </body>
 </html>
